@@ -29,23 +29,23 @@ def field_REGAE(handle, astra, E, scaling):
     print(g_REGAE)
     print("Scaling factor [A]: %d"%s_REGAE)
 
-    handle.zmax = 1
+    handle.bcalc_zmax = 1
 
     p = (s_REGAE, *g_REGAE)
-    z = np.linspace(-handle.zmax, handle.zmax, num = 2*10**handle.zgrain+1)
+    z = np.linspace(-handle.bcalc_zmax, handle.bcalc_zmax, num = 2*10**handle.bcalc_zgrain+1)
     handle.FM = "twoloop"
     B = handle.get_Bz(p)
     Bmax = handle.get_Bmax(p)
     fwhm = handle.get_fwhm(p)
     handle.E = E
-    focal = handle.get_f(p, E)
+    focal = handle.get_f(E, p)
     print("Maximum field strength: %.3f mT, FWHM %.1f mm"%(Bmax/mm, fwhm/mm))
     print("Focal length for %.2f MeV energy: %.3f m"%(handle.E, focal))
     plt.figure(figsize=(7,4))
     plt.plot(z/cm, B/mm, "-k", label="Bz(z)")
     plt.xlabel("Axial position [cm]")
     plt.ylabel("On-axis field strength [mT]")
-    plt.axis([-handle.zmax/cm, handle.zmax/cm, 0, Bmax*1.05/mm])
+    plt.axis([-handle.bcalc_zmax/cm, handle.bcalc_zmax/cm, 0, Bmax*1.05/mm])
     plt.show()
     astra.write_field(z, B)
     print("Field saved to solenoid.dat (don't forget scaling in ASTRA runfile!)")
