@@ -73,20 +73,22 @@ class Tracker(wrapper.TrackHandle):
         p = p.query("z>@z_solenoid")
         fits = self.data[lbl]["fits"]
         parts = self.data[lbl]["parts"]
-        for part in parts:
-            plt.plot(p.loc[part, "z"].values, p.loc[part, "r"].values/mm, ".r")
-        plt.plot(p.loc[part, "z"].values, p.loc[part, "r"].values/mm, ".r", label="data")
+        z = np.linspace(p.get("z").min(), p.get("z").max(), num=1000)
         if "drdz" in fits.columns:
             for part in parts:
-                plt.plot(p.loc[part, "z"].values, self.model.axial_trajectory(p.loc[part, "z"].values, fits.loc[part, "z_f"], fits.loc[part, "drdz"])/mm, "--g")
-            plt.plot(p.loc[part, "z"].values, self.model.axial_trajectory(p.loc[part, "z"].values, fits.loc[part, "z_f"], fits.loc[part, "drdz"])/mm, "--g", label="Axial approx.")
+                plt.plot(z, self.model.axial_trajectory(z, fits.loc[part, "z_f"], fits.loc[part, "drdz"])/mm, "--g")
+            plt.plot(z, self.model.axial_trajectory(z, fits.loc[part, "z_f"], fits.loc[part, "drdz"])/mm, "--g", label="Axial approx.")
         else:
             for part in parts:
-                plt.plot(p.loc[part, "z"].values, self.model.off_axis_trajectory(p.loc[part, "z"].values, fits.loc[part, "z_f"], fits.loc[part, "r_min"], fits.loc[part, "dxdz"], fits.loc[part, "dydz"], fits.loc[part, "cos0"])/mm, "--g")
-            plt.plot(p.loc[part, "z"].values, self.model.off_axis_trajectory(p.loc[part, "z"].values, fits.loc[part, "z_f"], fits.loc[part, "r_min"], fits.loc[part, "dxdz"], fits.loc[part, "dydz"], fits.loc[part, "cos0"])/mm, "--g", label="Approx. with offset")
+                plt.plot(z, self.model.off_axis_trajectory(z, fits.loc[part, "z_f"], fits.loc[part, "r_min"], fits.loc[part, "dxdz"], fits.loc[part, "dydz"], fits.loc[part, "cos0"])/mm, "--g")
+            plt.plot(z, self.model.off_axis_trajectory(z, fits.loc[part, "z_f"], fits.loc[part, "r_min"], fits.loc[part, "dxdz"], fits.loc[part, "dydz"], fits.loc[part, "cos0"])/mm, "--g", label="Approx. with offset")
+        for part in parts:
+            plt.plot(p.loc[part, "z"].values, p.loc[part, "r"].values/mm, "+r")
+        plt.plot(p.loc[part, "z"].values, p.loc[part, "r"].values/mm, "+r", label="data")
         plt.xlabel("Axial position [m]", fontsize=16)
         plt.ylabel("Radial position [mm]", fontsize=16)
-        plt.legend(loc="upper left", fontsize=16)
+        plt.axis([self.runs.loc[label, "z_focal_left"], self.runs.loc[label, "z_focal_right"], 0, p.get("r").max()*1.05/mm])
+        plt.legend(loc="upper center", fontsize=16)
 
     def check_felddurchgang(self, label=None):
         lbl = self.resolve_label(label)
